syntax = "proto3";
package messenger;

import "raftpb/raft.proto";
import "node_info.proto";
import "common.proto";
import "group_info.proto";

option go_package = "ecos/edge-node/moon";

service Moon {
  rpc SendRaftMessage (raftpb.Message) returns (raftpb.Message) {}
  rpc AddNodeToGroup (NodeInfo) returns (AddNodeReply) {}
  rpc GetGroupInfo(GetGroupInfoRequest) returns (GroupInfo) {};
}

message AddNodeReply {
  Result result = 1;
  NodeInfo leaderInfo = 2;
}

message GetGroupInfoRequest {
  uint64 term = 1;
}